# invetory-control

./: LICENSE  README.md  pyproject.toml  settings.toml
inventory_control/: app.py
inventory_control/ext/api/: __init__.py
inventory_control/ext/api/resources/: product.py  user.py
inventory_control/ext/db/: database_commands.py
inventory_control/ext/db/models/: product.py  user.py
inventory_control/ext/migrations/: __init__.py
inventory_control/ext/serialization/schemas/: product.py  user.py
migrations/versions/: 242a2eec7108_creating_tables.py  fa7727522ee1_recreating_tables.py
tests/: conftest.py  test_endpoints.py  test_flask_create_app.py  test_flask_dynaconf.py  test_inventory_control.py
