[tool.poetry]
name = "inventory_control"
version = "0.1.0"
description = ""
authors = ["NatanCervinski <natanscer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
python-dotenv = "^0.15.0"
dynaconf = "^3.1.3"
Flask-SQLAlchemy = "^2.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
